Statistical Test Added

--- a/Data/Data Table Generation.ipynb
+++ b/Data/Data Table Generation.ipynb
@@ -122,6 +122,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Method II"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stat_tests(x, y):\n",
+    "    res1 = [\"Dependent\", \"Independent\"]\n",
+    "    res2 = [\"Same Disribution\", \"Different Distribution\"]\n",
+    "    \n",
+    "    print(\"CORRELATION:\")\n",
+    "    a, b = stats.pearsonr(x, y)\n",
+    "    print(\"  PearsonrResult(correlation={}, p_values={})    {}\".format(a, b, res1[int(b<0.05)]))\n",
+    "    statistic = stats.spearmanr(x, y)\n",
+    "    print(\"  {}    {}\".format(statistic, res1[int(statistic.pvalue<0.05)]))\n",
+    "    statistic = stats.kendalltau(x, y)\n",
+    "    print(\"  {}    {}\".format(statistic, res1[int(statistic.pvalue<0.05)]))\n",
+    "    \n",
+    "    print(\"\\nPARAMETRIC STATISTICAL HYPOTHESIS TESTS\")\n",
+    "    statistic = stats.ttest_ind(x, y)\n",
+    "    print(\"  {}    {}\".format(statistic, res2[int(statistic.pvalue<0.05)]))\n",
+    "    statistic = stats.ttest_rel(x, y)\n",
+    "    print(\"  {}    {}\".format(statistic, res2[int(statistic.pvalue<0.05)]))\n",
+    "    statistic = stats.f_oneway(x, y)\n",
+    "    print(\"  {}    {}\".format(statistic, res2[int(statistic.pvalue<0.05)]))\n",
+    "                        \n",
+    "    print('\\nNON-PARAMETRIC STATISTICAL HYPOTHESIS TESTS')\n",
+    "    statistic = stats.mannwhitneyu(x, y)\n",
+    "    print(\"  {}    {}\".format(statistic, res2[int(statistic.pvalue<0.05)]))\n",
+    "    statistic = stats.wilcoxon(x, y)\n",
+    "    print(\"  {}    {}\".format(statistic, res2[int(statistic.pvalue<0.05)]))\n",
+    "    statistic = stats.kruskal(x, y)\n",
+    "    print(\"  {}    {}\".format(statistic, res2[int(statistic.pvalue<0.05)]))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
