Pre Experimentation Data Generated Completly

--- a/Data/Data Table Generation.ipynb
+++ b/Data/Data Table Generation.ipynb
@@ -199,27 +199,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seed = 69\n",
-    "noise = 5\n",
-    "sep = 5\n",
+    "def get_data(seed):\n",
+    "    noise = 5\n",
+    "    sep = 5\n",
+    "    np.random.seed(seed)\n",
+    "    g = list(np.arange(1+noise, 100-noise, 13))\n",
+    "    h = list(np.arange(g[0]+sep+noise, 100+sep-noise+2, 12))\n",
     "\n",
-    "np.random.seed(seed)\n",
-    "g = list(np.arange(1+noise, 100-noise, 13))\n",
-    "h = list(np.arange(g[0]+sep+noise, 100+sep-noise+2, 12))\n",
+    "    x = []\n",
+    "    y = []\n",
     "\n",
-    "x = []\n",
-    "y = []\n",
-    "\n",
-    "for i in g:\n",
-    "    for j in h:\n",
-    "        if i<j:\n",
-    "            x.append(i + np.random.randint(-noise, noise+1))\n",
-    "            y.append(j + np.random.randint(-noise, noise+1))"
+    "    for i in g:\n",
+    "        for j in h:\n",
+    "            if i<j:\n",
+    "                x.append(i + np.random.randint(-noise, noise+1))\n",
+    "                y.append(j + np.random.randint(-noise, noise+1))\n",
+    "                \n",
+    "    return x, y"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seed = 69\n",
+    "\n",
+    "x,y = get_data(seed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -266,6 +278,108 @@
    ],
    "source": [
     "stat_tests(x, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Generation\n",
+    "\n",
+    "I'm using Method 2."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Reading for each depth values\n",
+    "\n",
+    "dval = 35"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colnames = [\"depth\", \"l1\", \"l2\", \"w1\", \"w2\", \"w3\", \"w4\", \"w5\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_table_data(dval = 35, ftype=\"csv\"):\n",
+    "    \"\"\"\n",
+    "    ftype: It takes value from the list [\"csv\", \"xlxs\"]\n",
+    "    \"\"\"\n",
+    "    data = np.zeros(shape=(35*6, 3), dtype=np.int16)\n",
+    "    for i in range(6):\n",
+    "        x,y = get_data(10**i-1)\n",
+    "        data[dval*i:dval*(i+1), :] = np.array([np.ones(shape = dval)*(i+1), x, y]).T\n",
+    "\n",
+    "    assert data.shape == (dval*6, 3)\n",
+    "\n",
+    "    try:\n",
+    "        df = pd.DataFrame(data, columns=colnames[:3])\n",
+    "        for col in colnames[3:]:\n",
+    "            df[col] = \"\"\n",
+    "        if ftype == \"csv\":\n",
+    "            df.to_csv(\"free-free-system.csv\", index=False)\n",
+    "        if ftype == \"xlsx\":\n",
+    "            df.to_excel(\"free-free-system.xlsx\", index=False)\n",
+    "        print(\"File Generated\")\n",
+    "    except:\n",
+    "        print(\"File couldn't be generated.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File Generated\n"
+     ]
+    }
+   ],
+   "source": [
+    "generate_table_data(ftype=\"csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File Generated\n"
+     ]
+    }
+   ],
+   "source": [
+    "generate_table_data(ftype=\"xlsx\")"
    ]
   }
  ],
