New Column Added

--- a/Data/Data Table Generation.ipynb
+++ b/Data/Data Table Generation.ipynb
@@ -306,7 +306,8 @@
    "source": [
     "# Reading for each depth values\n",
     "\n",
-    "dval = 35"
+    "dval = 35\n",
+    "N = 10"
    ]
   },
   {
@@ -315,12 +316,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "colnames = [\"depth\", \"l1\", \"l2\", \"w1\", \"w2\", \"w3\", \"w4\", \"w5\"]"
+    "colnames = [\"depth\", \"l1\", \"l2\", \"w1\", \"w2\", \"w3\", \"w4\", \"w5\", \"deflection\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
