Reading table entries changed.

--- a/Data/Data Table Generation.ipynb
+++ b/Data/Data Table Generation.ipynb
@@ -306,8 +306,7 @@
    "source": [
     "# Reading for each depth values\n",
     "\n",
-    "dval = 35\n",
-    "N = 10"
+    "dval = 35"
    ]
   },
   {
@@ -316,12 +315,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "colnames = [\"depth\", \"l1\", \"l2\", \"w1\", \"w2\", \"w3\", \"w4\", \"w5\", \"deflection\"]"
+    "colnames = [\"depth\", \"l1\", \"l2\", \"w1\", \"w2\", \"w3\", \"w4\", \"w5\", \"deflection\"]\n",
+    "d_vals = [0.5, 1, 2, 3, 4, 5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,9 +332,10 @@
     "    data = np.zeros(shape=(35*6, 3), dtype=np.int16)\n",
     "    for i in range(6):\n",
     "        x,y = get_data(10**i-1)\n",
-    "        data[dval*i:dval*(i+1), :] = np.array([np.ones(shape = dval)*(i+1), x, y]).T\n",
+    "        data[dval*i:dval*(i+1), :] = np.array([np.ones(shape = dval)*d_vals[i], x, y]).T\n",
     "\n",
-    "    assert data.shape == (dval*6, 3)\n",
+    "    data = np.vstack((np.zeros((1,3)), data))\n",
+    "    assert data.shape == (1 + dval*6, 3)\n",
     "\n",
     "    try:\n",
     "        df = pd.DataFrame(data, columns=colnames[:3])\n",
@@ -351,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
