--- a/Data/Data Table Generation.ipynb
+++ b/Data/Data Table Generation.ipynb
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +329,7 @@
     "    \"\"\"\n",
     "    ftype: It takes value from the list [\"csv\", \"xlxs\"]\n",
     "    \"\"\"\n",
-    "    data = np.zeros(shape=(35*6, 3), dtype=np.int16)\n",
+    "    data = np.zeros(shape=(35*6, 3), dtype=np.float16)\n",
     "    for i in range(6):\n",
     "        x,y = get_data(10**i-1)\n",
     "        data[dval*i:dval*(i+1), :] = np.array([np.ones(shape = dval)*d_vals[i], x, y]).T\n",
