--- a/Reports/Fixed-Fixed-Scrapped-Data/Data Scrapping.ipynb
+++ b/Reports/Fixed-Fixed-Scrapped-Data/Data Scrapping.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def scrapper(fname, basepath = \"../Fixed-Fixed_Reports/\"):\n",
+    "def scrapper(fname, basepath = \"../Fixed-Fixed_Test_Reports/\"):\n",
     "    with open(basepath+fname, \"r\") as file:\n",
     "        data = file.read()\n",
     "        data = data.replace(\"\\x00\", \"\")[2:]\n",
@@ -54,7 +54,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fnames = list(os.walk(\"../\"))[3][2][:-2]"
+    "# For training and Vaildation\n",
+    "fnames = list(os.walk(\"../\"))[3][2][:-2]\n",
+    "\n",
+    "# For testing Data\n",
+    "fnames = list(os.walk(\"../Fixed-Fixed_Test_Reports/\"))[0][2]"
    ]
   },
   {
@@ -107,22 +111,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.sort_values(\"Index\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Appending Meta Data"
+    "df = df.sort_values([\"Index\", \"Mode\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.to_csv(\"Fixed-Fixed-Test.csv\", index=False)"
+   ]
   }
  ],
  "metadata": {
