--- a/Data Analysis/Ridge Regression.ipynb
+++ b/Data Analysis/Ridge Regression.ipynb
@@ -574,7 +574,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -589,6 +591,361 @@
    ],
    "source": [
     "mean_squared_log_error(y_pred, y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Final Testing Phase\n",
+    "\n",
+    "In this phase separeate simulations were done with new set of points generated random;y with different random seed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>depth</th>\n",
+       "      <th>l1</th>\n",
+       "      <th>l2</th>\n",
+       "      <th>Mode</th>\n",
+       "      <th>Frequency</th>\n",
+       "      <th>Max_Deflection</th>\n",
+       "      <th>Average_Deflection</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>63</td>\n",
+       "      <td>510</td>\n",
+       "      <td>1</td>\n",
+       "      <td>52.613</td>\n",
+       "      <td>7.5540</td>\n",
+       "      <td>3.8030</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>63</td>\n",
+       "      <td>510</td>\n",
+       "      <td>2</td>\n",
+       "      <td>144.790</td>\n",
+       "      <td>7.2355</td>\n",
+       "      <td>3.6191</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>63</td>\n",
+       "      <td>510</td>\n",
+       "      <td>3</td>\n",
+       "      <td>283.540</td>\n",
+       "      <td>7.3149</td>\n",
+       "      <td>4.0421</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>63</td>\n",
+       "      <td>510</td>\n",
+       "      <td>4</td>\n",
+       "      <td>322.530</td>\n",
+       "      <td>11.8550</td>\n",
+       "      <td>4.5453</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>63</td>\n",
+       "      <td>510</td>\n",
+       "      <td>5</td>\n",
+       "      <td>468.260</td>\n",
+       "      <td>7.4041</td>\n",
+       "      <td>3.8655</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>63</td>\n",
+       "      <td>510</td>\n",
+       "      <td>6</td>\n",
+       "      <td>489.250</td>\n",
+       "      <td>7.4189</td>\n",
+       "      <td>3.8899</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>255</td>\n",
+       "      <td>742</td>\n",
+       "      <td>1</td>\n",
+       "      <td>52.730</td>\n",
+       "      <td>7.5491</td>\n",
+       "      <td>3.8768</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>255</td>\n",
+       "      <td>742</td>\n",
+       "      <td>2</td>\n",
+       "      <td>145.000</td>\n",
+       "      <td>7.2373</td>\n",
+       "      <td>4.5900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>255</td>\n",
+       "      <td>742</td>\n",
+       "      <td>3</td>\n",
+       "      <td>284.560</td>\n",
+       "      <td>7.3335</td>\n",
+       "      <td>4.6257</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>255</td>\n",
+       "      <td>742</td>\n",
+       "      <td>4</td>\n",
+       "      <td>322.740</td>\n",
+       "      <td>11.8650</td>\n",
+       "      <td>4.7365</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>255</td>\n",
+       "      <td>742</td>\n",
+       "      <td>5</td>\n",
+       "      <td>468.820</td>\n",
+       "      <td>7.4455</td>\n",
+       "      <td>3.8296</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>255</td>\n",
+       "      <td>742</td>\n",
+       "      <td>6</td>\n",
+       "      <td>489.270</td>\n",
+       "      <td>7.4189</td>\n",
+       "      <td>3.9768</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>284</td>\n",
+       "      <td>392</td>\n",
+       "      <td>1</td>\n",
+       "      <td>52.718</td>\n",
+       "      <td>7.5589</td>\n",
+       "      <td>4.2583</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>284</td>\n",
+       "      <td>392</td>\n",
+       "      <td>2</td>\n",
+       "      <td>145.590</td>\n",
+       "      <td>7.2449</td>\n",
+       "      <td>4.4668</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>284</td>\n",
+       "      <td>392</td>\n",
+       "      <td>3</td>\n",
+       "      <td>284.710</td>\n",
+       "      <td>7.3420</td>\n",
+       "      <td>4.0085</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>284</td>\n",
+       "      <td>392</td>\n",
+       "      <td>4</td>\n",
+       "      <td>322.950</td>\n",
+       "      <td>11.8590</td>\n",
+       "      <td>5.0308</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>284</td>\n",
+       "      <td>392</td>\n",
+       "      <td>5</td>\n",
+       "      <td>470.430</td>\n",
+       "      <td>7.4485</td>\n",
+       "      <td>4.2504</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>284</td>\n",
+       "      <td>392</td>\n",
+       "      <td>6</td>\n",
+       "      <td>489.290</td>\n",
+       "      <td>7.4191</td>\n",
+       "      <td>4.3315</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    depth   l1   l2  Mode  Frequency  Max_Deflection  Average_Deflection\n",
+       "0     0.5   63  510     1     52.613          7.5540              3.8030\n",
+       "1     0.5   63  510     2    144.790          7.2355              3.6191\n",
+       "2     0.5   63  510     3    283.540          7.3149              4.0421\n",
+       "3     0.5   63  510     4    322.530         11.8550              4.5453\n",
+       "4     0.5   63  510     5    468.260          7.4041              3.8655\n",
+       "5     0.5   63  510     6    489.250          7.4189              3.8899\n",
+       "6     0.5  255  742     1     52.730          7.5491              3.8768\n",
+       "7     0.5  255  742     2    145.000          7.2373              4.5900\n",
+       "8     0.5  255  742     3    284.560          7.3335              4.6257\n",
+       "9     0.5  255  742     4    322.740         11.8650              4.7365\n",
+       "10    0.5  255  742     5    468.820          7.4455              3.8296\n",
+       "11    0.5  255  742     6    489.270          7.4189              3.9768\n",
+       "12    0.5  284  392     1     52.718          7.5589              4.2583\n",
+       "13    0.5  284  392     2    145.590          7.2449              4.4668\n",
+       "14    0.5  284  392     3    284.710          7.3420              4.0085\n",
+       "15    0.5  284  392     4    322.950         11.8590              5.0308\n",
+       "16    0.5  284  392     5    470.430          7.4485              4.2504\n",
+       "17    0.5  284  392     6    489.290          7.4191              4.3315"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_test = pd.read_csv(\"../Data/Fixed-Fixed-Test.csv\")\n",
+    "df_test.head(18)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_X = df_test[[\"depth\", \"l1\", \"l2\", \"Mode\"]].values\n",
+    "test_X = get_feature(test_X)\n",
+    "\n",
+    "test_Y = df_test[[\"Frequency\", \"Max_Deflection\", \"Average_Deflection\"]].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_res1 = model1.predict(test_X)\n",
+    "test_res2 = model2.predict(test_X)\n",
+    "test_res3 = model3.predict(test_X)\n",
+    "\n",
+    "test_pred_y = get_output(np.hstack((test_res1.reshape(-1, 1), test_res2.reshape(-1, 1), test_res3.reshape(-1, 1))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert y_pred.shape == y_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6929891056572112"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "explained_variance_score(test_pred_y, test_Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.094309587626132"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_absolute_error(test_pred_y, test_Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.39964659061191493"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_squared_log_error(test_pred_y, test_Y)"
    ]
   }
  ],
