--- a/Data/DataSet Generator.ipynb
+++ b/Data/DataSet Generator.ipynb
@@ -336,7 +336,7 @@
     "\n",
     "print(\"No of Values Missing in IInd Table for Index in Table I: \", df1.shape[0] - len(set(df2[\"Index\"])))\n",
     "\n",
-    "# Values are missed for following indices: [22, 83, 97, 122, 156]"
+    "# Values are missed for following indices: [22, 86, 97, 122, 156]"
    ]
   },
   {
@@ -350,6 +350,90 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>depth</th>\n",
+       "      <th>l1</th>\n",
+       "      <th>l2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>47.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>36.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>61.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>122</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>49.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>156</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>36.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     depth    l1    l2\n",
+       "22     0.5  49.0  47.0\n",
+       "86     2.0  36.0  36.0\n",
+       "97     2.0  62.0  61.0\n",
+       "122    3.0  34.0  49.0\n",
+       "156    4.0  36.0  36.0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.iloc[[22, 86, 97, 122, 156]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Transformation on Table I\n",
@@ -361,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +703,7 @@
        "2    0.5  40  260   6.0    489.260          17.728              8.7298"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,6 +711,26 @@
    "source": [
     "result = df1.join(df2.set_index(\"Index\"))\n",
     "result.head(18)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Removing the Spurious Recors\n",
+    "\n",
+    "result = result[~np.isnan(result[\"Mode\"])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result[\"Mode\"] = result[\"Mode\"].astype(int)"
    ]
   },
   {
@@ -638,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
