--- a/Data/Testing DataSet Generator.ipynb
+++ b/Data/Testing DataSet Generator.ipynb
@@ -45,8 +45,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>d1</th>\n",
-       "      <th>d2</th>\n",
+       "      <th>depth</th>\n",
        "      <th>l1</th>\n",
        "      <th>l2</th>\n",
        "    </tr>\n",
@@ -55,13 +54,11 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0.5</td>\n",
-       "      <td>0.5</td>\n",
        "      <td>63</td>\n",
        "      <td>510</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.5</td>\n",
        "      <td>0.5</td>\n",
        "      <td>255</td>\n",
        "      <td>742</td>\n",
@@ -69,20 +66,17 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0.5</td>\n",
-       "      <td>0.5</td>\n",
        "      <td>284</td>\n",
        "      <td>392</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0.5</td>\n",
-       "      <td>0.5</td>\n",
        "      <td>290</td>\n",
        "      <td>804</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.5</td>\n",
        "      <td>0.5</td>\n",
        "      <td>440</td>\n",
        "      <td>639</td>\n",
@@ -92,12 +86,12 @@
        "</div>"
       ],
       "text/plain": [
-       "    d1   d2   l1   l2\n",
-       "0  0.5  0.5   63  510\n",
-       "1  0.5  0.5  255  742\n",
-       "2  0.5  0.5  284  392\n",
-       "3  0.5  0.5  290  804\n",
-       "4  0.5  0.5  440  639"
+       "   depth   l1   l2\n",
+       "0    0.5   63  510\n",
+       "1    0.5  255  742\n",
+       "2    0.5  284  392\n",
+       "3    0.5  290  804\n",
+       "4    0.5  440  639"
       ]
      },
      "execution_count": 2,
@@ -387,8 +381,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>d1</th>\n",
-       "      <th>d2</th>\n",
+       "      <th>depth</th>\n",
        "      <th>l1</th>\n",
        "      <th>l2</th>\n",
        "      <th>Mode</th>\n",
@@ -401,7 +394,6 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0.5</td>\n",
-       "      <td>0.5</td>\n",
        "      <td>63</td>\n",
        "      <td>510</td>\n",
        "      <td>1</td>\n",
@@ -411,7 +403,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.5</td>\n",
        "      <td>0.5</td>\n",
        "      <td>63</td>\n",
        "      <td>510</td>\n",
@@ -423,7 +414,6 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0.5</td>\n",
-       "      <td>0.5</td>\n",
        "      <td>63</td>\n",
        "      <td>510</td>\n",
        "      <td>3</td>\n",
@@ -433,7 +423,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.5</td>\n",
        "      <td>0.5</td>\n",
        "      <td>63</td>\n",
        "      <td>510</td>\n",
@@ -445,7 +434,6 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0.5</td>\n",
-       "      <td>0.5</td>\n",
        "      <td>63</td>\n",
        "      <td>510</td>\n",
        "      <td>5</td>\n",
@@ -455,7 +443,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.5</td>\n",
        "      <td>0.5</td>\n",
        "      <td>63</td>\n",
        "      <td>510</td>\n",
@@ -467,7 +454,6 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0.5</td>\n",
-       "      <td>0.5</td>\n",
        "      <td>255</td>\n",
        "      <td>742</td>\n",
        "      <td>1</td>\n",
@@ -477,7 +463,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.5</td>\n",
        "      <td>0.5</td>\n",
        "      <td>255</td>\n",
        "      <td>742</td>\n",
@@ -489,7 +474,6 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0.5</td>\n",
-       "      <td>0.5</td>\n",
        "      <td>255</td>\n",
        "      <td>742</td>\n",
        "      <td>3</td>\n",
@@ -499,7 +483,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.5</td>\n",
        "      <td>0.5</td>\n",
        "      <td>255</td>\n",
        "      <td>742</td>\n",
@@ -511,7 +494,6 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0.5</td>\n",
-       "      <td>0.5</td>\n",
        "      <td>255</td>\n",
        "      <td>742</td>\n",
        "      <td>5</td>\n",
@@ -521,7 +503,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.5</td>\n",
        "      <td>0.5</td>\n",
        "      <td>255</td>\n",
        "      <td>742</td>\n",
@@ -533,7 +514,6 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0.5</td>\n",
-       "      <td>0.5</td>\n",
        "      <td>284</td>\n",
        "      <td>392</td>\n",
        "      <td>1</td>\n",
@@ -543,7 +523,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.5</td>\n",
        "      <td>0.5</td>\n",
        "      <td>284</td>\n",
        "      <td>392</td>\n",
@@ -555,7 +534,6 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0.5</td>\n",
-       "      <td>0.5</td>\n",
        "      <td>284</td>\n",
        "      <td>392</td>\n",
        "      <td>3</td>\n",
@@ -565,7 +543,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.5</td>\n",
        "      <td>0.5</td>\n",
        "      <td>284</td>\n",
        "      <td>392</td>\n",
@@ -577,7 +554,6 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0.5</td>\n",
-       "      <td>0.5</td>\n",
        "      <td>284</td>\n",
        "      <td>392</td>\n",
        "      <td>5</td>\n",
@@ -587,7 +563,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.5</td>\n",
        "      <td>0.5</td>\n",
        "      <td>284</td>\n",
        "      <td>392</td>\n",
@@ -601,25 +576,25 @@
        "</div>"
       ],
       "text/plain": [
-       "    d1   d2   l1   l2  Mode  Frequency  Max_Deflection  Average_Deflection\n",
-       "0  0.5  0.5   63  510     1     52.613          7.5540              3.8030\n",
-       "0  0.5  0.5   63  510     2    144.790          7.2355              3.6191\n",
-       "0  0.5  0.5   63  510     3    283.540          7.3149              4.0421\n",
-       "0  0.5  0.5   63  510     4    322.530         11.8550              4.5453\n",
-       "0  0.5  0.5   63  510     5    468.260          7.4041              3.8655\n",
-       "0  0.5  0.5   63  510     6    489.250          7.4189              3.8899\n",
-       "1  0.5  0.5  255  742     1     52.730          7.5491              3.8768\n",
-       "1  0.5  0.5  255  742     2    145.000          7.2373              4.5900\n",
-       "1  0.5  0.5  255  742     3    284.560          7.3335              4.6257\n",
-       "1  0.5  0.5  255  742     4    322.740         11.8650              4.7365\n",
-       "1  0.5  0.5  255  742     5    468.820          7.4455              3.8296\n",
-       "1  0.5  0.5  255  742     6    489.270          7.4189              3.9768\n",
-       "2  0.5  0.5  284  392     1     52.718          7.5589              4.2583\n",
-       "2  0.5  0.5  284  392     2    145.590          7.2449              4.4668\n",
-       "2  0.5  0.5  284  392     3    284.710          7.3420              4.0085\n",
-       "2  0.5  0.5  284  392     4    322.950         11.8590              5.0308\n",
-       "2  0.5  0.5  284  392     5    470.430          7.4485              4.2504\n",
-       "2  0.5  0.5  284  392     6    489.290          7.4191              4.3315"
+       "   depth   l1   l2  Mode  Frequency  Max_Deflection  Average_Deflection\n",
+       "0    0.5   63  510     1     52.613          7.5540              3.8030\n",
+       "0    0.5   63  510     2    144.790          7.2355              3.6191\n",
+       "0    0.5   63  510     3    283.540          7.3149              4.0421\n",
+       "0    0.5   63  510     4    322.530         11.8550              4.5453\n",
+       "0    0.5   63  510     5    468.260          7.4041              3.8655\n",
+       "0    0.5   63  510     6    489.250          7.4189              3.8899\n",
+       "1    0.5  255  742     1     52.730          7.5491              3.8768\n",
+       "1    0.5  255  742     2    145.000          7.2373              4.5900\n",
+       "1    0.5  255  742     3    284.560          7.3335              4.6257\n",
+       "1    0.5  255  742     4    322.740         11.8650              4.7365\n",
+       "1    0.5  255  742     5    468.820          7.4455              3.8296\n",
+       "1    0.5  255  742     6    489.270          7.4189              3.9768\n",
+       "2    0.5  284  392     1     52.718          7.5589              4.2583\n",
+       "2    0.5  284  392     2    145.590          7.2449              4.4668\n",
+       "2    0.5  284  392     3    284.710          7.3420              4.0085\n",
+       "2    0.5  284  392     4    322.950         11.8590              5.0308\n",
+       "2    0.5  284  392     5    470.430          7.4485              4.2504\n",
+       "2    0.5  284  392     6    489.290          7.4191              4.3315"
       ]
      },
      "execution_count": 6,
