--- a/Data Analysis/Linear Regression.ipynb
+++ b/Data Analysis/Linear Regression.ipynb
@@ -11,7 +11,7 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
-    "from sklearn.metrics import explained_variance_score, mean_absolute_error, mean_squared_log_error "
+    "from sklearn.metrics import explained_variance_score, mean_absolute_error, mean_squared "
    ]
   },
   {
