Adaptive Boosting Updated

--- a/Data Analysis/Adaptive Boosting.ipynb
+++ b/Data Analysis/Adaptive Boosting.ipynb
@@ -137,12 +137,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Preprocessing"
+    "# Utility"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate(pred, true, outcome):\n",
+    "    print(\"Explained Variance Score: {:0.6f}%\".format(100*explained_variance_score(pred[:,outcome], true[:,outcome])))\n",
+    "    print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(pred[:,outcome], true[:,outcome])))\n",
+    "    print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(pred[:,outcome], true[:,outcome])))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +191,7 @@
        "StandardScaler(copy=True, with_mean=True, with_std=True)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -273,7 +292,7 @@
        " 'random_state': 140}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +345,7 @@
        "             scoring=None, verbose=0)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +365,7 @@
        "{'learning_rate': 1.0, 'loss': 'exponential', 'n_estimators': 500}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +396,7 @@
        "             scoring=None, verbose=0)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +416,7 @@
        "{'learning_rate': 0.1, 'loss': 'linear', 'n_estimators': 50}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +447,7 @@
        "             scoring=None, verbose=0)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +467,7 @@
        "{'learning_rate': 1.0, 'loss': 'square', 'n_estimators': 50}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,14 +516,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Explained Varaince Score: 99.968094%\n",
+      "Explained Variance Score: 99.968094%\n",
       "Mean Absolute Error: 2.060535\n",
       "Mean Squared Error: 0.000082\n"
      ]
@@ -513,32 +532,7 @@
    "source": [
     "# Frequency Outcome\n",
     "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(y_pred_mode1[:,0], y_test[:,0])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(y_pred_mode1[:,0], y_test[:,0])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(y_pred_mode1[:,0], y_test[:,0])))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Explained Varaince Score: 99.859101%\n",
-      "Mean Absolute Error: 0.077768\n",
-      "Mean Squared Error: 0.000059\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Max Deflection Outcome\n",
-    "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(y_pred_mode1[:,1], y_test[:,1])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(y_pred_mode1[:,1], y_test[:,1])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(y_pred_mode1[:,1], y_test[:,1])))"
+    "evaluate(y_pred_mode1, y_test, 0)"
    ]
   },
   {
@@ -550,7 +544,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Explained Varaince Score: 41.078764%\n",
+      "Explained Variance Score: 99.859101%\n",
+      "Mean Absolute Error: 0.077768\n",
+      "Mean Squared Error: 0.000059\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Max Deflection Outcome\n",
+    "\n",
+    "evaluate(y_pred_mode1, y_test, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Explained Variance Score: 41.078764%\n",
       "Mean Absolute Error: 0.407339\n",
       "Mean Squared Error: 0.002327\n"
      ]
@@ -559,9 +574,7 @@
    "source": [
     "# Average Defelction Outcome\n",
     "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(y_pred_mode1[:,2], y_test[:,2])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(y_pred_mode1[:,2], y_test[:,2])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(y_pred_mode1[:,2], y_test[:,2])))"
+    "evaluate(y_pred_mode1, y_test, 2)"
    ]
   },
   {
@@ -580,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +609,7 @@
        " 'n_jobs': None}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +655,7 @@
        "             scoring=None, verbose=0)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,29 +691,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Explained Varaince Score: 99.952504%\n",
-      "Mean Absolute Error: 2.193742\n",
-      "Mean Squared Error: 0.000152\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Requency Outcome\n",
-    "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(y_pred_mode2[:,0], y_test[:,0])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(y_pred_mode2[:,0], y_test[:,0])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(y_pred_mode2[:,0], y_test[:,0])))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
    "outputs": [
@@ -708,18 +698,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Explained Varaince Score: 99.707554%\n",
-      "Mean Absolute Error: 0.149283\n",
-      "Mean Squared Error: 0.000125\n"
+      "Explained Variance Score: 99.952504%\n",
+      "Mean Absolute Error: 2.193742\n",
+      "Mean Squared Error: 0.000152\n"
      ]
     }
    ],
    "source": [
-    "# Max Deflection Outcome\n",
+    "# Frequency Outcome\n",
     "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(y_pred_mode2[:,1], y_test[:,1])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(y_pred_mode2[:,1], y_test[:,1])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(y_pred_mode2[:,1], y_test[:,1])))"
+    "evaluate(y_pred_mode2, y_test, 0)"
    ]
   },
   {
@@ -731,7 +719,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Explained Varaince Score: 36.775975%\n",
+      "Explained Variance Score: 99.707554%\n",
+      "Mean Absolute Error: 0.149283\n",
+      "Mean Squared Error: 0.000125\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Max Deflection Outcome\n",
+    "\n",
+    "evaluate(y_pred_mode2, y_test, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Explained Variance Score: 36.775975%\n",
       "Mean Absolute Error: 0.409129\n",
       "Mean Squared Error: 0.002315\n"
      ]
@@ -740,9 +749,7 @@
    "source": [
     "# Average Defelction Outcome\n",
     "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(y_pred_mode2[:,2], y_test[:,2])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(y_pred_mode2[:,2], y_test[:,2])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(y_pred_mode2[:,2], y_test[:,2])))"
+    "evaluate(y_pred_mode2, y_test, 2)"
    ]
   },
   {
@@ -756,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +860,7 @@
        "4    0.5  63  510     5    468.260          7.4041              3.8655"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -865,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -884,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -897,34 +904,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "assert test_pred_y_mode_1.shape == test_Y.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Explained Varaince Score: 99.961882%\n",
-      "Mean Absolute Error: 2.123450\n",
-      "Mean Squared Error: 0.000086\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Fequency Outcome\n",
-    "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(test_pred_y_mode_1[:,0], test_Y[:,0])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(test_pred_y_mode_1[:,0], test_Y[:,0])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(test_pred_y_mode_1[:,0], test_Y[:,0])))"
    ]
   },
   {
@@ -936,18 +920,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Explained Varaince Score: 66.187701%\n",
-      "Mean Absolute Error: 11.326095\n",
-      "Mean Squared Error: 0.645299\n"
+      "Explained Variance Score: 99.961882%\n",
+      "Mean Absolute Error: 2.123450\n",
+      "Mean Squared Error: 0.000086\n"
      ]
     }
    ],
    "source": [
-    "# Max Deflection Outcome\n",
+    "# Fequency Outcome\n",
     "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(test_pred_y_mode_1[:,1], test_Y[:,1])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(test_pred_y_mode_1[:,1], test_Y[:,1])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(test_pred_y_mode_1[:,1], test_Y[:,1])))"
+    "evaluate(test_pred_y_mode_1, test_Y, 0)"
    ]
   },
   {
@@ -959,7 +941,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Explained Varaince Score: 55.651597%\n",
+      "Explained Variance Score: 66.187701%\n",
+      "Mean Absolute Error: 11.326095\n",
+      "Mean Squared Error: 0.645299\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Max Deflection Outcome\n",
+    "\n",
+    "evaluate(test_pred_y_mode_1, test_Y, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Explained Variance Score: 55.651597%\n",
       "Mean Absolute Error: 5.738065\n",
       "Mean Squared Error: 0.561868\n"
      ]
@@ -968,9 +971,7 @@
    "source": [
     "# Average Defelction Outcome\n",
     "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(test_pred_y_mode_1[:,2], test_Y[:,2])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(test_pred_y_mode_1[:,2], test_Y[:,2])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(test_pred_y_mode_1[:,2], test_Y[:,2])))"
+    "evaluate(test_pred_y_mode_1, test_Y, 2)"
    ]
   },
   {
@@ -982,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -992,34 +993,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "assert test_pred_y_mode_2.shape == test_Y.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Explained Varaince Score: 99.947846%\n",
-      "Mean Absolute Error: 2.047152\n",
-      "Mean Squared Error: 0.000136\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Fequency Outcome\n",
-    "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(test_pred_y_mode_2[:,0], test_Y[:,0])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(test_pred_y_mode_2[:,0], test_Y[:,0])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(test_pred_y_mode_2[:,0], test_Y[:,0])))"
    ]
   },
   {
@@ -1031,7 +1009,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Explained Varaince Score: 66.240574%\n",
+      "Explained Variance Score: 99.947846%\n",
+      "Mean Absolute Error: 2.047152\n",
+      "Mean Squared Error: 0.000136\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Fequency Outcome\n",
+    "\n",
+    "evaluate(test_pred_y_mode_2, test_Y, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Explained Variance Score: 66.240574%\n",
       "Mean Absolute Error: 11.327536\n",
       "Mean Squared Error: 0.645599\n"
      ]
@@ -1040,14 +1039,12 @@
    "source": [
     "# Max Deflection Outcome\n",
     "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(test_pred_y_mode_2[:,1], test_Y[:,1])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(test_pred_y_mode_2[:,1], test_Y[:,1])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(test_pred_y_mode_2[:,1], test_Y[:,1])))"
+    "evaluate(test_pred_y_mode_2, test_Y, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1063,9 +1060,7 @@
    "source": [
     "# Average Defelction Outcome\n",
     "\n",
-    "print(\"Explained Variance Score: {:0.6f}%\".format(100*explained_variance_score(test_pred_y_mode_2[:,2], test_Y[:,2])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(test_pred_y_mode_2[:,2], test_Y[:,2])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(test_pred_y_mode_2[:,2], test_Y[:,2])))"
+    "evaluate(test_pred_y_mode_2, test_Y, 2)"
    ]
   }
  ],
